# mealie-mcp-server-container

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  compose.test.yaml  compose.yaml  pyproject.toml  remote_server.py
.github/workflows/: container.yml
.opencode/agent/: feature-reviewer.md  spec-maintainer.md  story-implementer.md  story-reviewer.md  test-runner.md
scripts/: fetch_upstream.py  list_tools_smoke.py
spec/: 01-project-bootstrap.md  02-remote-http-wrapper.md  03-container-build.md  04-network-access-control.md  05-configuration-and-secrets.md  06-documentation.md  07-test-harness.md  08-deployment-examples.md
src/tools/: recipe_tools.py
tests/: mock_mealie.py  test_mealie_client.py  test_recipe_tools.py  test_recipe_update_payload.py  test_remote_server.py
