[project]
name = "mealie-mcp-server-container"
version = "0.1.0"
description = "Docker remote HTTP wrapper for rldiao/mealie-mcp-server"
requires-python = ">=3.12"
dependencies = [
    "starlette>=0.47.0",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
