[project]
name = "mealie-mcp-server-container"
version = "0.2.0"
description = "Dockerized Mealie MCP server"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.0",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "starlette>=0.47.0",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
